--- a/ui/index.html
+++ b/ui/index.html
@@ -1,37 +1,44 @@
 <!-- HTML for static distribution bundle build -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Swagger UI</title>
-    <link rel="stylesheet" type="text/css" href="./swagger-ui.css" >
-    <link rel="icon" type="image/png" href="./favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="./favicon-16x16.png" sizes="16x16" />
-    <style>
-      html
-      {
-        box-sizing: border-box;
-        overflow: -moz-scrollbars-vertical;
-        overflow-y: scroll;
-      }
+    <head>
+        <meta charset="UTF-8" />
+        <title>Swagger UI</title>
+        <link rel="stylesheet" type="text/css" href="./swagger-ui.css" />
+        <link
+            rel="icon"
+            type="image/png"
+            href="./favicon-32x32.png"
+            sizes="32x32"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            href="./favicon-16x16.png"
+            sizes="16x16"
+        />
+        <style>
+            html {
+                box-sizing: border-box;
+                overflow: -moz-scrollbars-vertical;
+                overflow-y: scroll;
+            }
 
-      *,
-      *:before,
-      *:after
-      {
-        box-sizing: inherit;
-      }
+            *,
+            *:before,
+            *:after {
+                box-sizing: inherit;
+            }
 
-      body
-      {
-        margin:0;
-        background: #fafafa;
-      }
-    </style>
-    <script async defer src="./index.js"></script>
-  </head>
+            body {
+                margin: 0;
+                background: #fafafa;
+            }
+        </style>
+        <script async defer src="./index.js"></script>
+    </head>
 
-  <body>
-    <div id="swagger-ui"></div>
-  </body>
+    <body>
+        <div id="swagger-ui"></div>
+    </body>
 </html>
